fixed home page + demo hub

--- a/less/bootmetro/alerts.less
+++ b/less/bootmetro/alerts.less
@@ -56,6 +56,18 @@
 // For images and videos, set to block
 .toast-object {
    .media-object;
+   width: 90px;
+   height: 90px;
+//   margin-right: 10px;
+
+   &[class*="icon-"] {
+      display: inline-block;
+      width: 90px;
+      height: 90px;
+      font-size: 90px;
+      line-height: 90px;
+   }
+
 }
 
 // Reset margins on headings for tighter default spacing
