--- a/less/bootmetro/listviews.less
+++ b/less/bootmetro/listviews.less
@@ -32,6 +32,8 @@
    &:hover {
       border: solid 3px @tile-border-hover;
       cursor: pointer;
+      color: @white;
+      text-decoration: none;
    }
 
    &.selected {
