--- a/templates/demo/_layout.mustache
+++ b/templates/demo/_layout.mustache
@@ -70,7 +70,7 @@
    <script type="text/javascript" src="scripts/bootmetro-icons-ie7.js">
    <![endif]-->
 
-   <script type="text/javascript" src="{{assetspath}}assets/js/bootstrap.min.js"></script>
+   <script type="text/javascript" src="{{assetspath}}assets/js/min/bootstrap.min.js"></script>
    <script type="text/javascript" src="{{assetspath}}assets/js/bootmetro-panorama.js"></script>
    <script type="text/javascript" src="{{assetspath}}assets/js/bootmetro-pivot.js"></script>
    <script type="text/javascript" src="{{assetspath}}assets/js/bootmetro-charms.js"></script>
