--- a/templates/demo/hub.mustache
+++ b/templates/demo/hub.mustache
@@ -20,6 +20,19 @@
       </div>
    </div>
 
+   <div id="alerts-container">
+      <div id="toast-example1" class="toast toasttext02 fade in">
+         <button type="button" class="close" data-dismiss="alert"></button>
+         <div class="pull-left">
+            <div class="toast-object icon-info-4"></div>
+         </div>
+         <div class="toast-body">
+            <h4 class="toast-heading">Alpha version!</h4>
+            <p>Please be patience, this demo is still a work in progress! Thanks.</p>
+         </div>
+      </div>
+   </div>
+
    <!--<div id="metro-container" class="-container">-->
       <!--<div class="row">-->
          <!--<div id="hub" class="metro">-->
