--- a/templates/pages/about.mustache
+++ b/templates/pages/about.mustache
@@ -28,7 +28,8 @@
             So I had the idea "why not recreate in pure HTML5/CSS3 the win 8 style ?". I was already working with the beautiful Twitter Bootstrap framework and I thought that it was relatively simple to customize it to recreate a metro style.
             So... I started it.
             <br/>
-            At the same time I found the project MetroUI-CSS, by Sergey Pimenov, that evidently have had the same idea, but with some missing things from the original Metro guidelines, but his development was already ahead of mine.
+            At the same time I found the project MetroUI-CSS, by Sergey Pimenov, that evidently have had the same idea, but with some missing things from the original Metro guidelines, but his development was already ahead of mine; but I did not care, I wanted to build my own Metro framework.
+            <br/>
             So, that's the story that started all about BootMetro!
          </p>
       </div>
