--- a/templates/docs/docs-standard-components.mustache
+++ b/templates/docs/docs-standard-components.mustache
@@ -89,26 +89,26 @@
    <div class="bs-docs-example bs-docs-example-commands">
       <button class="win-command" rel="tootlip" title="Simple command with an image inside">
                      <span class="win-commandimage">
-                        <img src="assets/img/sample-tiles.png" width="42" height="42" alt=""/>
+                        <img src="{{assetspath}}assets/img/sample-tiles.png" width="42" height="42" alt=""/>
                      </span>
       </button>
 
       <button class="win-command" rel="tootlip" title="Command with image and label">
                      <span class="win-commandimage">
-                        <img src="assets/img/sample-tiles.png" width="42" height="42" alt=""/>
+                        <img src="{{assetspath}}assets/img/sample-tiles.png" width="42" height="42" alt=""/>
                      </span>
          <span class="win-label">With label</span>
       </button>
 
       <button class="win-command" rel="tootlip" title="Command with image with border ring">
                      <span class="win-commandimage win-commandring">
-                        <img src="assets/img/sample-tiles.png" width="42" height="42" alt=""/>
+                        <img src="{{assetspath}}assets/img/sample-tiles.png" width="42" height="42" alt=""/>
                      </span>
       </button>
 
       <button class="win-command" rel="tootlip" title="Command with image and label with border ring">
                      <span class="win-commandimage win-commandring">
-                        <img src="assets/img/sample-tiles.png" width="42" height="42" alt=""/>
+                        <img src="{{assetspath}}assets/img/sample-tiles.png" width="42" height="42" alt=""/>
                      </span>
          <span class="win-label">With ring &amp; label</span>
       </button>
