fixed some broken links

--- a/templates/docs/docs-advanced-components.mustache
+++ b/templates/docs/docs-advanced-components.mustache
@@ -9,7 +9,7 @@
 <!-- Page Headers
 ================================================== -->
 <div class="bs-docs-section">
-   <div class="page-components">
+   <div id="page-components">
       <h1 id="page-headers">Page components <small>basic blocks for standard metro pages</small></h1>
    </div>
 
