--- a/templates/docs/docs-index.mustache
+++ b/templates/docs/docs-index.mustache
@@ -68,7 +68,7 @@
             View pages where all different kind of Metro stuff is used, and that you can reuse yourself.
          </p>
          <p>
-            <a href="../demo/demo-hub.html" class="btn btn-success btn-large btn-block">
+            <a href="../demo/hub.html" class="btn btn-success btn-large btn-block">
                Demo Pages
                <i class="icon-eye-3"></i>
             </a>
